some bug handled

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section>
+            <div>
+                <h2 class="text-center">How does Javascript work.</h2>
+            </div>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
