adding quesction and answer

--- a/index.html
+++ b/index.html
@@ -77,9 +77,36 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        <section>
+        <section class="w-50 mx-auto p-4 fs-5">
             <div>
-                <h2 class="text-center">How does Javascript work.</h2>
+                <h2>1. How does Javascript work?</h2>
+                <p> <u class="fw-bold">Ans:</u> Javascript is a high leavel , scripting, modern, single threaded(single threaded means it can do one work at a time.) and client side language(Client side means it works in browser). When we write JavaScript code this code goes to the browser, the browser sends this code to the JavaScript engine.(Most of the browser has their own javascript engine like google chrome has V8 engine, fire fox has Spider Monkey etc.) The JavaScript engine compiles this code into machine language, then the computer can understand this code and then we see it in the browser.</p>
+            </div>
+            <div class="mt-5">
+                <h2>2.What does Javascript even loop do?</h2>
+                <p> <u class="fw-bold">Ans:</u> </p>
+            </div>
+            <div class="mt-5">
+                <h2>3. Difference between Local Storage and Session Storage. </h2>
+                <u class="fw-bold">Ans:</u>
+                <div class="d-flex">
+                    <div class="w-50 border">
+                        <h5 class="fw-bold text-center border p-2 bg-light">Local Storage</h5>
+                        <ul>                          
+                            <li class="mt-3">It is the process of storing data in our device storage.</li>
+                            <li class="mt-3">It stored data for life time excepting browser resart.</li>
+                            <li class="mt-3">It's data capacity is 5MB per app per browser.</li>
+                        </ul>
+                    </div>
+                    <div class="w-50 border">
+                        <h5 class="fw-bold text-center border p-2 bg-light">Session Storage</h5>
+                        <ul>
+                            <li class="mt-3">It is the porcess of storing data in our browser. .</li>
+                            <li class="mt-3">It stored data until the browser tab is oppen.</li>
+                            <li class="mt-3">It's capacity is limited only system memory.</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <footer></footer>
