--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="w-50 border">
                         <h5 class="fw-bold text-center border p-2 bg-light">Session Storage</h5>
                         <ul>
-                            <li class="mt-3">It is the porcess of storing data in our browser. .</li>
+                            <li class="mt-3">It is the porcess of storing data in our browser.</li>
                             <li class="mt-3">It stored data until the browser tab is oppen.</li>
                             <li class="mt-3">It's capacity is limited only system memory.</li>
                         </ul>
