--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         <ul>                          
                             <li class="mt-3">It is the process of storing data in our device storage.</li>
                             <li class="mt-3">It stored data for life time excepting browser resart.</li>
-                            <li class="mt-3">It's data capacity is 5MB per app per browser.</li>
+                            <li class="mt-3">It's capacity is limited only system memory.</li>
+                            <li class="mt-3"> Local storage data can be asccesible from any window.</li>
                         </ul>
                     </div>
                     <div class="w-50 border">
@@ -99,7 +100,8 @@
                         <ul>
                             <li class="mt-3">It is the porcess of storing data in our browser.</li>
                             <li class="mt-3">It stored data until the browser tab is oppen.</li>
-                            <li class="mt-3">It's capacity is limited only system memory.</li>
+                            <li class="mt-3">It's data capacity is 5MB per app per browser.</li>
+                            <li class="mt-3"> Session storage data can be accessible from same tab.</li>
                         </ul>
                     </div>
                 </div>
